wwr/styles/rafting.css
:root {
    --primary-color: #0B4F6C;
    /* Deep river blue */
    --secondary-color: #01BAEF;
    /*Bright water blue */
    --accent1-color: #20BF55;
    /* Forest green */
    --accent2-color: #F3A712;
    /* Adventure gold  */

    --heading-font: 'Trebuchet MS', sans-serif;
    --body-font: 'Arial', sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    color: var(--accent1-color);
}

header,
main,
footer,
section {
    width: 840px;
    margin: 0 auto;
}

header {
    margin-top: 1rem;
    margin-bottom: 1rem;
    display: grid;
    grid-template-columns: 300px 9fr 1fr;
    grid-row: 1fr 2fr;
    align-items: center;
    background-color: #0B4F6C;


}

header img {
    margin: 1rem 1rem 1rem 5rem;
    width: 100px;
    height: auto;

}

nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    list-style: none
}

header nav ul li a {
    text-decoration: none;
    color: #F3A712;
    padding: 0.5rem 1rem;
    border: 2px solid #F3A712;
    border-radius: 4px;
    background-color: transparent;

}

h1,
h2 {
    font-family: var(--heading-font);
    color: var(--primary-color);
    text-align: center;
}

nav,
p,
section,
article {
    margin: 16px;
    padding: 8px;
}

#history {
    width: 840px;
    margin: 0 auto;
}

.history-flex {
    display: flex;
    flex-direction: row;
    gap: 20px;
    align-items: center;
}

.history-flex p {
    flex: 1;
    margin: 0;
}

.history-mid-img {
    width: 250px;
    height: auto;
    margin: 0.5rem 1.5rem 0.5rem 0;

}

#adventure {
    width: 840px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(5, minmax(0, 1fr));
    grid-template-rows: auto auto;
    gap: 20px;

}

figure img {
    width: 100%;
    height: 150px;
    object-fit: cover;
}

figcaption {
    text-align: center;
}

footer p {
    color: var(--secondary-color);
}

.socialmedia {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;


}

.socialmedia a {
    text-decoration: none;
    margin: 5px;
}

.socialmedia a img {
    width: 25px;

}

.hero {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    padding: 16px;
    text-align: center;
    opacity: 0.9;
    background-color: var(--accent1-color);
    color: #fff;
}

.hero article {
    position: absolute;
    bottom: 5px;
    height: 125px;
    width: 90%;
    left: 3.5%;
    opacity: 0.9;
    padding: 16px;
    text-align: center;
    border-radius: 10px;
    background-color: var(--accent2-color);
    color: #fff;
    clear: both;
}

.hero article img {
    float: right;
    width: 125px;
}

